robballen75-Salesforce/4-7-15/src/objects/Contract_Product__c.object
<CustomObject>
    <fields>
        <fullName>Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Contract Products</relationshipLabel>
        <relationshipName>R00N50000001u9TNEAY</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Legacy_ProductSite_Id__c</fullName>
        <externalId>true</externalId>
        <label>Legacy ProductSite Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Product_Id__c</fullName>
        <label>Legacy Product Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Licenses_Year1__c</fullName>
        <label>Licenses - Year1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Licenses_Year2__c</fullName>
        <label>Licenses - Year2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Licenses_Year3__c</fullName>
        <label>Licenses - Year3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Description__c</fullName>
        <label>Product Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <picklist>
            <picklistValues>
                <fullName>3BClean Batch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3BClean Desktop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3BClean Desktop with Mobile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3BClean Server</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Author Toolkit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DMS Utility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DocID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DocXamine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DocXchange</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DocXstyles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DocXtools</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DocXtools Express</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DocXtools Express plus DocID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DocXtools Express plus Numbering, TOC and DocID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DocXtools Express plus Numbering and Table of Contents</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DocXtools plus Inconsistent Phrases and Incomplete Items</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EagleEye</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EagleEye / Lexis Draft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EagleEye Defined Terms Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EagleEye Eval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>French Canadian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Knowledge Partnership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal TemplatesPlus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Numbering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Patent Companion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PDF Compare Plus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TOC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WordSensa</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SF_Migration_Id__c</fullName>
        <externalId>true</externalId>
        <label>SF Migration Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Days_Remaining_Year1_f__c</fullName>
        <formula>Service_Days_Year1__c - Service_Days_Used_Year1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculated service days available minus days used.</inlineHelpText>
        <label>Service Days Remaining - Year1 (f)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_Days_Remaining_Year2_f__c</fullName>
        <formula>Service_Days_Year2__c - Service_Days_Used_Year2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculated service days available minus days used.</inlineHelpText>
        <label>Service Days Remaining - Year2 (f)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_Days_Remaining_Year3_f__c</fullName>
        <formula>Service_Days_Year3__c - Service_Days_Used_Year3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculated service days available minus days used.</inlineHelpText>
        <label>Service Days Remaining - Year3 (f)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_Days_Used_Year1__c</fullName>
        <label>Service Days Used - Year1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_Days_Used_Year2__c</fullName>
        <label>Service Days Used - Year2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_Days_Used_Year3__c</fullName>
        <label>Service Days Used - Year3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_Days_Year1__c</fullName>
        <label>Service Days - Year1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_Days_Year2__c</fullName>
        <label>Service Days - Year2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_Days_Year3__c</fullName>
        <label>Service Days - Year3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Number_of_Service_Days_Used__c</fullName>
        <formula>Service_Days_Used_Year1__c +  Service_Days_Used_Year2__c +  Service_Days_Used_Year3__c + Service_Days_Used_Year4__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Number of Service Days Used</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year_1_Licensing_Fee__c</fullName>
        <label>Year 1 Licensing Fee</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Year_2_Licensing_Fee__c</fullName>
        <label>Year 2 Licensing Fee</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Year_3_Licensing_Fee__c</fullName>
        <label>Year 3 Licensing Fee</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Contract Product</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Contract__c</columns>
        <columns>Product__c</columns>
        <columns>SF_Migration_Id__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CP-{YYYY}-{00000}</displayFormat>
        <label>Contract Product #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Products</pluralLabel>
    <recordTypes>
        <fullName>Services</fullName>
        <active>true</active>
        <label>Services</label>
    </recordTypes>
    <recordTypes>
        <fullName>Site_Licenses</fullName>
        <active>true</active>
        <label>Site Licenses</label>
    </recordTypes>
    <recordTypes>
        <fullName>User_Licenses</fullName>
        <active>true</active>
        <label>User Licenses</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>